HTML updated with header and footer Script updated to grid instead of flex stylesheet modified

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <div class="header">
         <div><h1>Etch-A-Sketch</h1>
             <h2>Did you see the liars face? Did you want to write top secret information? Did you want to draw a map leading to treasure?!</h2>
-        </div>
+        </div></div>
+        <div class="main">
         <div>
             <button class="btn" id="btn">Choose your grid size</button>
         </div>
-        <div class="container">
-
-        </div>
+        <div class="container" id="container"></div>
+    </div>
+    <div class="footer">
+        <p>Sandstone Archives &COPY; 2022</p>
+    </div>
 
     </body>
 </html>
