Index update to include UI Color choice added through buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
         </div></div>
         <div class="main">
         <div>
-            <button class="btn" id="btn">Choose your grid size</button>
+            <button class="btn" id="gridBtn">Change grid size</button>
+            <button class="btn" id="resetBtn">Reset grid</button>
+            <button class="btn" id="rainbowBtn">Rainbow Colors</button>
+        <div class="colors">
+            <button class="color" id="black"></button>
+            <button class="color" id="blue"></button>
+            <button class="color" id="red"></button>
+            <button class="color" id="yellow"></button>
+            <button class="color" id="orange"></button>
+            <button class="color" id="green"></button>
+            <button class="color" id="indigo"></button>
+            <button class="color" id="violet"></button>
+        </div>
         </div>
         <div class="container" id="container"></div>
     </div>
